--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "private": true,
+    "type": "module",
     "name": "gemini-react",
     "version": "1.0.0",
     "license": "MIT",
@@ -8,35 +9,57 @@
     ],
     "scripts": {
         "build": "parcel build 'packages/*/*' --no-cache",
+        "publish": "pnpm -r publish",
         "storybook": "storybook dev -p 6006",
-        "build-storybook": "storybook build"
+        "build-storybook": "storybook build",
+        "test": "jest",
+        "test:watch": "jest --watch",
+        "test:coverage": "jest --coverage"
     },
     "dependencies": {
         "react": "18.2.0",
         "react-dom": "18.2.0"
     },
     "devDependencies": {
-        "@chromatic-com/storybook": "^1.5.0",
+        "@babel/core": "^7.25.2",
+        "@babel/preset-env": "^7.25.3",
+        "@babel/preset-react": "^7.24.7",
+        "@babel/preset-typescript": "^7.24.7",
+        "@chromatic-com/storybook": "^1.6.1",
         "@parcel/packager-ts": "2.12.0",
         "@parcel/transformer-typescript-types": "2.12.0",
-        "@storybook/addon-essentials": "^8.1.5",
-        "@storybook/addon-interactions": "^8.1.5",
-        "@storybook/addon-links": "^8.1.5",
-        "@storybook/addon-onboarding": "^8.1.5",
-        "@storybook/blocks": "^8.1.5",
-        "@storybook/react": "^8.1.5",
-        "@storybook/react-vite": "^8.1.5",
-        "@storybook/test": "^8.1.5",
+        "@storybook/addon-essentials": "^8.2.2",
+        "@storybook/addon-interactions": "^8.2.2",
+        "@storybook/addon-links": "^8.2.2",
+        "@storybook/addon-onboarding": "^8.2.2",
+        "@storybook/blocks": "^8.2.2",
+        "@storybook/react": "^8.2.2",
+        "@storybook/react-vite": "^8.2.2",
+        "@storybook/test": "^8.2.2",
+        "@testing-library/dom": "^10.4.0",
+        "@testing-library/jest-dom": "^6.4.8",
         "@testing-library/react": "^15.0.7",
+        "@types/jest": "^29.5.12",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
         "@vanilla-extract/css": "^1.15.2",
+        "@vanilla-extract/dynamic": "^2.1.1",
+        "@vanilla-extract/jest-transform": "^1.1.8",
+        "@vanilla-extract/parcel-transformer": "^1.0.7",
+        "@vanilla-extract/recipes": "^0.5.5",
+        "@vanilla-extract/vite-plugin": "^4.0.10",
+        "@vitejs/plugin-react": "^4.3.1",
+        "babel-jest": "^29.7.0",
         "eslint": "^9.4.0",
         "eslint-config-react-app": "^7.0.1",
         "eslint-plugin-jsx-a11y": "^6.8.0",
         "eslint-plugin-storybook": "^0.8.0",
+        "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0",
         "parcel": "^2.12.0",
-        "storybook": "^8.1.5",
+        "prop-types": "^15.8.1",
+        "storybook": "^8.2.2",
+        "ts-jest": "^29.2.4",
         "typescript": "^5.4.5"
     }
 }
