--- a/packages/ui/Stack/package.json
+++ b/packages/ui/Stack/package.json
@@ -11,7 +11,8 @@
     ],
     "license": "MIT",
     "peerDependencies": {
-        "react": "^17.0 || ^18.0"
+        "react": "^17.0 || ^18.0",
+        "@vanilla-extract/dynamic": "^2.1.1"
     },
     "repository": {
         "type": "git",
